Add REST methods for vikings with GUI sync
