# src/main/java/ru/mephi/vikingdemo/repository/EquipmentItemRepository.java
@@ -12,26 +12,24 @@ public class EquipmentItemRepository {
 
     private final JdbcTemplate jdbcTemplate;
 
-    private final RowMapper<EquipmentItemEntity> equipmentRowMapper = (rs, rowNum) ->
-            new EquipmentItemEntity(
-                    rs.getInt("id"),
-                    rs.getInt("viking_id"),
-                    rs.getString("name"),
-                    rs.getString("quality")
-            );
+    private final RowMapper<EquipmentItemEntity> equipmentRowMapper = (rs, rowNum) -> new EquipmentItemEntity(
+            rs.getInt("id"),
+            rs.getInt("viking_id"),
+            rs.getString("name"),
+            rs.getString("quality")
+    );
 
     public EquipmentItemRepository(JdbcTemplate jdbcTemplate) {
         this.jdbcTemplate = jdbcTemplate;
     }
 
-    public List<EquipmentItemEntity> findByVikingId(long vikingId) {
+    public List<EquipmentItemEntity> findByVikingId(int vikingId) {
         String sql = """
                 select id, viking_id, name, quality
                 from equipment_items
                 where viking_id = ?
                 order by id
                 """;
-
         return jdbcTemplate.query(sql, equipmentRowMapper, vikingId);
     }
 
@@ -41,24 +39,19 @@ public class EquipmentItemRepository {
                 from equipment_items
                 order by viking_id, id
                 """;
-
         return jdbcTemplate.query(sql, equipmentRowMapper);
     }
 
     public void save(EquipmentItemEntity item) {
-        Integer vikingId = item.vikingId();
-        String name = item.name();
-        String quality = item.quality();
         String sql = """
                 insert into equipment_items(viking_id, name, quality)
                 values (?, ?, ?)
                 """;
-
-        jdbcTemplate.update(sql, vikingId, name, quality);
+        jdbcTemplate.update(sql, item.vikingId(), item.name(), item.quality());
     }
 
-    public void deleteByVikingId(long vikingId) {
+    public int deleteByVikingId(int vikingId) {
         String sql = "delete from equipment_items where viking_id = ?";
-        jdbcTemplate.update(sql, vikingId);
+        return jdbcTemplate.update(sql, vikingId);
     }
 }
